--- a/Core.Admin/Views/Home/Index.cshtml
+++ b/Core.Admin/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
             <div class="risks-block low h-117">
                 <i class="icon-users"></i>
                 <div class="risk-details">
-                    <h2>7</h2>
+                    <h2>@ViewBag.Users</h2>
                     <p>إجمالي عدد المستخدمين</p>
                 </div>
             </div>
@@ -24,7 +24,7 @@
             <div class="risks-block low h-117">
                 <i class="icon-line-graph"></i>
                 <div class="risk-details">
-                    <h2>5</h2>
+                    <h2> @ViewBag.Earnings </h2>
                     <p>إجمالي الأرباح</p>
                 </div>
             </div>
@@ -33,7 +33,7 @@
             <div class="risks-block low h-117">
                 <i class="icon-rate_review"></i>
                 <div class="risk-details">
-                    <h2>7</h2>
+                    <h2>@ViewBag.Requests</h2>
                     <p>إجمالي الإشتراكات</p>
                 </div>
             </div>
