--- a/Core.Admin/Views/Shared/_Layout.cshtml
+++ b/Core.Admin/Views/Shared/_Layout.cshtml
@@ -1,4 +1,17 @@
-﻿<!doctype html>
+﻿
+@using System.Security.Claims
+@{
+
+    //First get user claims
+    var claims = User.Identity.IsAuthenticated ? User.Claims : null;
+
+    //Filter specific claim
+    var name = claims?.FirstOrDefault(x => x.Type.Equals(ClaimTypes.Name, StringComparison.OrdinalIgnoreCase))?.Value;
+    
+
+
+}
+<!doctype html>
 <html lang="en">
 <head>
     <!-- Required meta tags -->
@@ -8,7 +21,7 @@
     <!-- Meta -->
     <meta name="description" content="Responsive Bootstrap4 Dashboard Template">
     <meta name="author" content="ParkerThemes">
-    <link rel="shortcut icon" href="img/logo.jpeg" />
+    <link rel="shortcut icon" href="~/img/logo.jpeg" />
 
     <!-- Title -->
     <title>Almo</title>
@@ -25,7 +38,7 @@
 
     <!-- Main css -->
     <link rel="stylesheet" href="~/css/main.css" asp-append-version="true">
-    <link rel="stylesheet" href="summernote/summernote-bs4.css"   asp-append-version="true"/>
+    <link rel="stylesheet" href="summernote/summernote-bs4.css" asp-append-version="true" />
 
 
 
@@ -41,8 +54,8 @@
     <!-- Header start -->
     <header class="header">
         <div class="logo-wrapper">
-            <a href="index.html" class="logo">
-                <img src="img/logo.jpeg" alt="Almo_logo" />
+            <a asp-controller="Home" asp-action="Index" class="logo">
+                <img src="~/img/logo.jpeg" alt="Almo_logo" />
             </a>
 
         </div>
@@ -53,21 +66,12 @@
 
                 <li class="dropdown">
                     <a href="#" id="userSettings" class="user-settings" data-toggle="dropdown" aria-haspopup="true">
-                        <span class="user-name">أحمد محمد حسين</span>
+                        <span class="user-name">@name</span>
                         <span class="avatar"><i class="icon-user"></i></span>
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userSettings">
                         <div class="header-profile-actions">
-                            <div class="header-user-profile">
-                                <div class="header-user">
-                                    <img src="img/user.png" alt="Admin Template" />
-                                </div>
-                                <h5>أحمد محمد علي حسين</h5>
-
-                            </div>
-                            <a href="#"><i class="icon-user1"></i> الصفحة الشخصية</a>
-                            <a href="#"><i class="icon-settings1"></i> إعدادات الحساب</a>
-                            <a href="#"><i class="icon-log-out1"></i> تسجيل الخروج</a>
+                            <a asp-action="Logout" asp-controller="Account"><i class="icon-log-out1"></i> تسجيل الخروج</a>
                         </div>
                     </div>
                 </li>
