--- a/Core.Admin/Views/Shared/_Menu.cshtml
+++ b/Core.Admin/Views/Shared/_Menu.cshtml
@@ -30,29 +30,30 @@
 
         </li>
         <li class="nav-item dropdown">
-            <a class="nav-link" is-active-route asp-class="active-page" asp-controller="Reports" asp-action="Index" id="appsDropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link" is-active-route asp-class="active-page" asp-controller="Settings" asp-action="Index" id="appsDropdown" role="button" aria-haspopup="true" aria-expanded="false">
 
-                <i class="icon-border_color nav-icon"></i>
-                لتقارير
+                <i class="icon-sort nav-icon"></i>
+                الإعدادات
             </a>
 
         </li>
         <li class="nav-item dropdown">
+            <a class="nav-link" is-active-route href="#" id="appsDropdown" role="button" aria-haspopup="true" aria-expanded="false">
+
+                <i class="icon-border_color nav-icon"></i>
+                التقارير
+            </a>
+
+        </li>
+        @*<li class="nav-item dropdown">
             <a class="nav-link" is-active-route asp-class="active-page" asp-controller="Bills" asp-action="Index" id="appsDropdown" role="button" aria-haspopup="true" aria-expanded="false">
 
                 <i class="icon-documents nav-icon"></i>
                 الفواتير
             </a>
 
-        </li>
-        <li class="nav-item dropdown">
-            <a class="nav-link" is-active-route asp-class="active-page" asp-controller="Settings" asp-action="Index" id="appsDropdown" role="button" aria-haspopup="true" aria-expanded="false">
+        </li>*@
 
-                <i class="icon-sort nav-icon"></i>
-                  الإعدادات
-            </a>
-
-        </li>
         @*<li class="nav-item dropdown">
             <a class="nav-link" href="#" id="appsDropdown" role="button">
                 <i class="icon-cog nav-icon"></i>
@@ -69,7 +70,7 @@
         </li>*@
 
         <li class="nav-item dropdown">
-            <a class="nav-link" is-active-route asp-class="active-page" asp-controller="Messages" asp-action="Index" id="appsDropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link" is-active-route href="#" id="appsDropdown" role="button" aria-haspopup="true" aria-expanded="false">
 
                 <i class="icon-chat nav-icon"></i>
                 الرسائل
