api and admin pages

--- a/Core.Admin/Views/Help/Index.cshtml
+++ b/Core.Admin/Views/Help/Index.cshtml
@@ -11,12 +11,12 @@
     <div class="row justify-content-center gutters">
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
 
-            <form asp-action="SearchRequests" asp-controller="Requests" method="post" id="frmSearchRequest" enctype="multipart/form-data">
+            <form asp-action="SearchHelps" asp-controller="Help" method="post" id="frmSearchHelp" enctype="multipart/form-data">
 
                 <div class="card m-0">
                     <div class="card-header">
                         <div class="card-title display_item "><i class="icon-grid"></i> عرض بيانات</div>
-                      @*  <a class="display_item add_data" href="@Url.Action("AddEdit","Requests")"><i class="icon-plus"></i> إضافة</a>*@
+                   @*     <a class="display_item add_data" href="@Url.Action("AddEdit","Helps")"><i class="icon-plus"></i> إضافة</a>*@
                     </div>
                     <div class="card-body">
                         <div class="row gutters">
@@ -36,7 +36,7 @@
                         </div>
 
 
-                        <a href="#" class="btn btn-primary3 float-right" id="btnSearchRequest"><i class="icon-search"></i> بحث</a>
+                        <a href="#" class="btn btn-primary3 float-right" id="btnSearchHelp"><i class="icon-search"></i> بحث</a>
 
                     </div>
                 </div>
@@ -51,8 +51,8 @@
                 <div class="card-header">
                     <div class="card-title"><i class="icon-info"></i> بيانات البحث</div>
                 </div>
-                <div id="divListRequests" data-request-url="@Url.Action("ListRequests","Requests")">
-                    @Html.Action("ListRequests", "Requests")
+                <div id="divListHelps" data-request-url="@Url.Action("ListHelps","Help")">
+                    @Html.Action("ListHelps", "Help")
                 </div>
             </div>
 
@@ -62,5 +62,5 @@
 <!-- Content wrapper end -->
 @section Scripts{
 
-    <script src="~/js/Views/Request.js" asp-append-version="true"></script>
+    <script src="~/js/Views/Help.js" asp-append-version="true"></script>
 }
