--- a/Core.Admin/Views/Shared/_Menu.cshtml
+++ b/Core.Admin/Views/Shared/_Menu.cshtml
@@ -45,35 +45,21 @@
             </a>
 
         </li>
-        @*<li class="nav-item dropdown">
-            <a class="nav-link" is-active-route asp-class="active-page" asp-controller="Bills" asp-action="Index" id="appsDropdown" role="button" aria-haspopup="true" aria-expanded="false">
+  
+        <li class="nav-item dropdown">
+            <a class="nav-link" is-active-route asp-class="active-page" asp-controller="Help" asp-action="Index" id="appsDropdown" role="button" aria-haspopup="true" aria-expanded="false">
 
-                <i class="icon-documents nav-icon"></i>
-                الفواتير
-            </a>
-
-        </li>*@
-
-        @*<li class="nav-item dropdown">
-            <a class="nav-link" href="#" id="appsDropdown" role="button">
-                <i class="icon-cog nav-icon"></i>
-                الإعدادات
-            </a>
-
-        </li>*@
-        @*<li class="nav-item dropdown">
-            <a class="nav-link" href="#" id="appsDropdown" role="button">
                 <i class="icon-help_outline nav-icon"></i>
                 المساعدة
             </a>
 
-        </li>*@
+        </li>
 
         <li class="nav-item dropdown">
-            <a class="nav-link" is-active-route href="#" id="appsDropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link" asp-class="active-page" asp-controller="Problems" asp-action="Index" id="appsDropdown" role="button" aria-haspopup="true" aria-expanded="false">
 
                 <i class="icon-chat nav-icon"></i>
-                الرسائل
+                الشكاوى
             </a>
 
         </li>
