--- a/Core.Admin/Views/Settings/Index.cshtml
+++ b/Core.Admin/Views/Settings/Index.cshtml
@@ -37,7 +37,7 @@
                                     <span asp-validation-for="ThreeMonthsCost" class="text-danger"></span>
                                 </div>
                             </div>
-                            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
                                 <div class="card m-0">
                                     <div class="card-header">
                                         <div class="card-title display_item"><i class="icon-grid"></i>سياسة الخصوصية </div>
@@ -51,7 +51,7 @@
                                 </div>
 
                             </div>
-                            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
                                 <div class="card m-0">
                                     <div class="card-header">
                                         <div class="card-title display_item"><i class="icon-grid"></i> الشروط والاحكام </div>
@@ -60,6 +60,48 @@
                                     <div class="card-body">
 
                                         <textarea class="summernote" asp-for="TermsAndConditions"></textarea>
+
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
+                                <div class="card m-0">
+                                    <div class="card-header">
+                                        <div class="card-title display_item"><i class="icon-grid"></i>عن التطبيق </div>
+
+                                    </div>
+                                    <div class="card-body">
+
+                                        <textarea class="summernote" asp-for="AboutApp"></textarea>
+
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
+                                <div class="card m-0">
+                                    <div class="card-header">
+                                        <div class="card-title display_item"><i class="icon-grid"></i>  الخطة الدراسية </div>
+
+                                    </div>
+                                    <div class="card-body">
+
+                                        <textarea class="summernote" asp-for="StudyPlan"></textarea>
+
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
+                                <div class="card m-0">
+                                    <div class="card-header">
+                                        <div class="card-title display_item"><i class="icon-grid"></i>Credits </div>
+
+                                    </div>
+                                    <div class="card-body">
+
+                                        <textarea class="summernote" asp-for="Credits"></textarea>
 
                                     </div>
                                 </div>
