--- a/Core.Admin/Views/Shared/_Menu.cshtml
+++ b/Core.Admin/Views/Shared/_Menu.cshtml
@@ -30,36 +30,10 @@
 
         </li>
         <li class="nav-item dropdown">
-            <a class="nav-link" is-active-route asp-class="active-page" asp-controller="Settings" asp-action="Index" id="appsDropdown" role="button" aria-haspopup="true" aria-expanded="false">
-
-                <i class="icon-sort nav-icon"></i>
-                الإعدادات
-            </a>
-
-        </li>
-        <li class="nav-item dropdown">
-            <a class="nav-link" is-active-route href="#" id="appsDropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link"  asp-class="active-page" asp-controller="Reports" asp-action="Index" id="appsDropdown" role="button" aria-haspopup="true" aria-expanded="false">
 
                 <i class="icon-border_color nav-icon"></i>
                 التقارير
-            </a>
-
-        </li>
-  
-        <li class="nav-item dropdown">
-            <a class="nav-link" is-active-route asp-class="active-page" asp-controller="Help" asp-action="Index" id="appsDropdown" role="button" aria-haspopup="true" aria-expanded="false">
-
-                <i class="icon-help_outline nav-icon"></i>
-                المساعدة
-            </a>
-
-        </li>
-
-        <li class="nav-item dropdown">
-            <a class="nav-link" asp-class="active-page" asp-controller="Problems" asp-action="Index" id="appsDropdown" role="button" aria-haspopup="true" aria-expanded="false">
-
-                <i class="icon-chat nav-icon"></i>
-                الشكاوى
             </a>
 
         </li>
@@ -70,5 +44,34 @@
             </a>
 
         </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link" asp-class="active-page" asp-controller="Problems" asp-action="Index" id="appsDropdown" role="button" aria-haspopup="true" aria-expanded="false">
+
+                <i class="icon-chat nav-icon"></i>
+                الشكاوى
+            </a>
+
+        </li>
+
+        <li class="nav-item dropdown">
+            <a class="nav-link" is-active-route asp-class="active-page" asp-controller="Settings" asp-action="Index" id="appsDropdown" role="button" aria-haspopup="true" aria-expanded="false">
+
+                <i class="icon-sort nav-icon"></i>
+                الإعدادات
+            </a>
+
+        </li>
+
+
+        <li class="nav-item dropdown">
+            <a class="nav-link" is-active-route asp-class="active-page" asp-controller="Help" asp-action="Index" id="appsDropdown" role="button" aria-haspopup="true" aria-expanded="false">
+
+                <i class="icon-help_outline nav-icon"></i>
+                المساعدة
+            </a>
+
+        </li>
+
+
     </ul>
 </div>
