image in problem

--- a/Core.Admin/Views/Problems/AddEdit.cshtml
+++ b/Core.Admin/Views/Problems/AddEdit.cshtml
@@ -53,7 +53,7 @@
                                 <div class="">
                                     <div class="card-body">
                                         <div class="avatar xxxl">
-                                            <img src="@("https://localhost:44367/Attachments/"+Model.Image)" class="circle img-avatar" alt="Wafi Admin">
+                                            <img src="@("https://api-almo.repoteq.com/Attachments/"+Model.Image)" class="circle img-avatar" alt="Wafi Admin">
 
                                         </div>
                                     </div>
