--- a/Core.Admin/Views/Problems/Index.cshtml
+++ b/Core.Admin/Views/Problems/Index.cshtml
@@ -15,7 +15,7 @@
 
                 <div class="card m-0">
                     <div class="card-header">
-                        <div class="card-title display_item "><i class="icon-grid"></i> عرض بيانات</div>
+                        <div class="card-title display_item "><i class="icon-grid"></i>  بيانات البحث</div>
                      @*   <a class="display_item add_data" href="@Url.Action("AddEdit","Problems")"><i class="icon-plus"></i> إضافة</a>*@
                     </div>
                     <div class="card-body">
@@ -49,7 +49,7 @@
 
             <div class="card">
                 <div class="card-header">
-                    <div class="card-title"><i class="icon-info"></i> بيانات البحث</div>
+                    <div class="card-title"><i class="icon-info"></i>  المشاكل</div>
                 </div>
                 <div id="divListProblems" data-request-url="@Url.Action("ListProblems","Problems")">
                     @Html.Action("ListProblems", "Problems")
