--- a/Core.Admin/Views/Reports/Index.cshtml
+++ b/Core.Admin/Views/Reports/Index.cshtml
@@ -15,7 +15,7 @@
 
                 <div class="card m-0">
                     <div class="card-header">
-                        <div class="card-title display_item "><i class="icon-grid"></i> عرض بيانات</div>
+                        <div class="card-title display_item "><i class="icon-grid"></i>  بيانات البحث</div>
                     </div>
                     <div class="card-body">
                         <div class="row gutters">
@@ -48,7 +48,7 @@
 
             <div class="card">
                 <div class="card-header">
-                    <div class="card-title"><i class="icon-info"></i> بيانات البحث</div>
+                    <div class="card-title"><i class="icon-info"></i>  التقارير</div>
                 </div>
                 <div id="divListReports" data-Report-url="@Url.Action("ListReports","Reports")">
                     @Html.Action("ListReports", "Reports")
