--- a/Core.Admin/Views/Requests/AddEdit.cshtml
+++ b/Core.Admin/Views/Requests/AddEdit.cshtml
@@ -2,7 +2,7 @@
 @model SubscribeRequest
 <div class="page-header">
     <ol class="breadcrumb">
-        <li class="breadcrumb-item active"> بيانات الطلب</li>
+        <li class="breadcrumb-item active"> بيانات الاشتراك</li>
 
     </ol>
 </div>
@@ -15,7 +15,7 @@
 
                 <div class="card m-0">
                     <div class="card-header">
-                        <div class="card-title"><i class="icon-grid"></i> بيانات الاشتراك </div>
+                        <div class="card-title"><i class="icon-grid"></i> بيانات البحث </div>
 
                     </div>
                     <div class="card-body">
