--- a/Core.Admin/Views/Requests/Index.cshtml
+++ b/Core.Admin/Views/Requests/Index.cshtml
@@ -15,7 +15,7 @@
 
                 <div class="card m-0">
                     <div class="card-header">
-                        <div class="card-title display_item "><i class="icon-grid"></i> عرض بيانات</div>
+                        <div class="card-title display_item "><i class="icon-grid"></i>بيانات البحث</div>
                       @*  <a class="display_item add_data" href="@Url.Action("AddEdit","Requests")"><i class="icon-plus"></i> إضافة</a>*@
                     </div>
                     <div class="card-body">
@@ -63,7 +63,7 @@
 
             <div class="card">
                 <div class="card-header">
-                    <div class="card-title"><i class="icon-info"></i> بيانات البحث</div>
+                    <div class="card-title"><i class="icon-info"></i>  الاشتراكات</div>
                 </div>
                 <div id="divListRequests" data-request-url="@Url.Action("ListRequests","Requests")">
                     @Html.Action("ListRequests", "Requests")
