--- a/Core.Admin/Views/Requests/_ListRequests.cshtml
+++ b/Core.Admin/Views/Requests/_ListRequests.cshtml
@@ -10,8 +10,8 @@
                 <tr>
                     <th>اسم العميل </th>
                     <th>البريد الإلكتروني</th>
-                    <th>مده الطلب</th>
-                    <th> تكلفة الطلب</th>
+                    <th>مده الاشتراك</th>
+                    <th> تكلفة الاشتراك</th>
                     <th></th>
 
                 </tr>
