--- a/Core.Admin/Views/Shared/_Menu.cshtml
+++ b/Core.Admin/Views/Shared/_Menu.cshtml
@@ -25,7 +25,7 @@
             <a class="nav-link" is-active-route asp-class="active-page" asp-controller="Requests" asp-action="Index" id="appsDropdown" role="button" aria-haspopup="true" aria-expanded="false">
 
                 <i class="icon-format_list_numbered nav-icon"></i>
-                الطلبات
+                الاشتراكات
             </a>
 
         </li>
