--- a/Core.Admin/Views/Help/Index.cshtml
+++ b/Core.Admin/Views/Help/Index.cshtml
@@ -15,7 +15,7 @@
 
                 <div class="card m-0">
                     <div class="card-header">
-                        <div class="card-title display_item "><i class="icon-grid"></i> عرض بيانات</div>
+                        <div class="card-title display_item "><i class="icon-grid"></i>    بيانات البحث</div>
                    @*     <a class="display_item add_data" href="@Url.Action("AddEdit","Helps")"><i class="icon-plus"></i> إضافة</a>*@
                     </div>
                     <div class="card-body">
@@ -49,7 +49,7 @@
 
             <div class="card">
                 <div class="card-header">
-                    <div class="card-title"><i class="icon-info"></i> بيانات البحث</div>
+                    <div class="card-title"><i class="icon-info"></i>  المساعدات</div>
                 </div>
                 <div id="divListHelps" data-request-url="@Url.Action("ListHelps","Help")">
                     @Html.Action("ListHelps", "Help")
