admin,web,database changes

--- a/Core.Admin/Views/Shared/_Menu.cshtml
+++ b/Core.Admin/Views/Shared/_Menu.cshtml
@@ -22,6 +22,13 @@
             </a>
         </li>
         <li class="nav-item dropdown">
+
+            <a class="nav-link" is-active-route asp-class="active-page" asp-controller="User" asp-action="SubscribedUsers" id="appsDropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                <i class="icon-home nav-icon"></i>
+                المشتركين
+            </a>
+        </li>
+        <li class="nav-item dropdown">
             <a class="nav-link" is-active-route asp-class="active-page" asp-controller="Requests" asp-action="Index" id="appsDropdown" role="button" aria-haspopup="true" aria-expanded="false">
 
                 <i class="icon-format_list_numbered nav-icon"></i>
@@ -30,7 +37,7 @@
 
         </li>
         <li class="nav-item dropdown">
-            <a class="nav-link"  asp-class="active-page" asp-controller="Reports" asp-action="Index" id="appsDropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link" asp-class="active-page" asp-controller="Reports" asp-action="Index" id="appsDropdown" role="button" aria-haspopup="true" aria-expanded="false">
 
                 <i class="icon-border_color nav-icon"></i>
                 التقارير
